schema/testdata/errors/array_fields_expression_incorrect_operator.keel
model Thing {
    fields {
        texts Text[]
        texts2 Text[]
        numbers Text[]
    }

    actions {
        list listThings1() {
            //expect-error:32:34:AttributeExpressionError:cannot use operator 'in' with types Text[] and Text
            @where(thing.texts in "science")
        }

        list listThings2() {
            //expect-error:32:34:AttributeExpressionError:cannot use operator 'in' with types Text[] and Text[]
            @where(thing.texts in ["science"])
        }

        list listThings3() {
            //expect-error:32:34:AttributeExpressionError:cannot use operator 'in' with types Text[] and Text[]
            @where(["science"] in thing.texts)
        }

        // This won't be validated against until we deprecate '==' acting as an ANY query for relationships
        //list listThings4() {
        //    @where(thing.texts == "science")
        //}

        list listThings5() {
            //expect-error:30:32:AttributeExpressionError:cannot use operator '==' with types Text and Text[]
            @where("science" == thing.texts)
        }
    }
}

